Fixed wrapping issue

--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ html {
     background-color: #ddd;
     cursor: pointer;
     border-spacing: 3px;
-    padding: 4px;
+    padding: 0px;
     padding-right:  0px;
     padding-bottom: 0px;
     border-radius: 4px;
@@ -41,12 +41,14 @@ html {
 #theTable td {
     padding: 0px;
 
+    white-space: nowrap;
+
     width:  32px;
     height: 32px;
 
     border: 4px solid transparent;
 
-    border-radius: 4px;
+    border-radius: 0px;
 
     text-align: center;
 
@@ -71,7 +73,23 @@ html {
     visibility: hidden;
 }
 
-#theTable th.horizontal .number {
+#theTable th.vertical {
+    border-radius: 0px;
+    border-top-left-radius:  4px;
+    border-top-right-radius: 4px;
+}
+
+#theTable th.horizontal {
+    border-radius: 0px;
+    border-top-left-radius:    4px;
+    border-bottom-left-radius: 4px;
+}
+
+#theTable th.vertical .hintBackground {
+    display: block;
+    margin-bottom: 4px;
+    margin-left:  auto;
+    margin-right: auto;
 }
 
 #theTable th .hintBackground {
@@ -112,7 +130,6 @@ html {
 
 #theTable th.horizontal {
     text-align: right;
-    width: 160px;
 }
 
 #theTable th.crosshair {
